- Document strict route now requires PDF `startxref` marker evidence for explicit `.pdf` analysis, preventing object+trailer placeholder inputs from passing strict document routing.
- Document strict route now requires a strict RTF prolog (`{\\rtf1`), baseline control-word evidence (`\\ansi`/`\\deff`), and closing-brace evidence for explicit `.rtf` analysis, preventing partial/plaintext placeholders from passing strict document routing.
- Document strict route now requires minimum CHM structural header evidence (including header-length sanity) for explicit `.chm` analysis, preventing tiny header-only placeholders from passing strict document routing.
- IaC/CI adapter extraction deepened:
- Deterministic action reference parsing now distinguishes pinned commit/digest refs from unpinned refs.
- Remote module/source indicators and external runner signals are counted with structured counters in adapter summary output.
- Explicit `cicd` route now requires CI structure/signals (not filename/path hints alone), failing closed on path-hint-only placeholders.
- Adapter `auto` classification now treats CI structure/action references as CI evidence, so valid pinned workflows classify as `cicd` instead of falling back to `iac`.
- Explicit `iac` route now requires IaC structural signals; CI-style workflow content with generic secret terms no longer passes strict IaC routing.
- Container adapter extraction deepened:
- OCI layout counts now include manifest and blob counts.
- Container tarball detection now recognizes Docker-style markers (`manifest.json` + `repositories`) and OCI tar markers (`oci-layout` + `index.json` + `blobs/sha256/*`) for local tar inputs.
- Explicit OCI layout route now fails closed when manifests exist but blob evidence is missing (`CONTAINER_LAYOUT_INVALID`), preventing partial container identity acceptance.